--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ru">
   <head>
-    <link rel="stylesheet" href="index.css"
+
+    <meta charset="UTF-8">
+    <meta name="author" content="Artyom Rasskazov">
+
+    <title>UpTrader</title>
+
+    <link rel="stylesheet" href="index.css">
+
   </head>
 
   <body>
-
+    
+<!-- QUESTION: How pass validation test if browser autocomplete my radio? -->
     <input class="content__visibility-flag trade-section"
            id="trade-section"
            name="active-section"
