Made the code more structured

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   </head>
 
-  <body>
-    
+  <body style="margin: 0px">
+
 <!-- QUESTION: How pass validation test if browser autocomplete my radio? -->
     <input class="content__visibility-flag trade-section"
            id="trade-section"
